# ChatMate

./: README.md
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6d46958a0f9b_added_user.py  ebdf52a0cb74_added_salt.py
backend/api/: api.py  deps.py
backend/api/endpoints/: users.py
backend/core/: __init__.py  app.py  database.py  settings.py
backend/models/: user.py
backend/schemas/: users.py
backend/services/: users.py
mobile/: README.md
mobile/app/: build.gradle
mobile/app/src/androidTest/java/com/chatmate/: ExampleInstrumentedTest.kt
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/java/com/chatmate/: MainActivity.kt  RegisterActivity.kt  Utils.kt
mobile/app/src/main/res/drawable/: button_bg.xml  edit_text_bg.xml
mobile/app/src/main/res/layout/: activity_main.xml  activity_register.xml
mobile/app/src/main/res/values/: strings.xml  themes.xml
mobile/app/src/test/java/com/chatmate/: ExampleUnitTest.kt
mobile/gradle/wrapper/: gradle-wrapper.properties
